[package]
name = "mystiko_server_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.64" }
config = { version = "0.13.3" }
ethers-core = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["ws"] }
ethers-signers = { version = "2.0.14" }
ethers-middleware = { version = "2.0.14" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.17" }
regex = { version = "1.7.1" }
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.152" }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
thiserror = { version = "1.0", default-features = false }
typed-builder = { version = "0.15.2" }
generic-array = { version = "0.14.6" }
dotenv = { version = "0.15.0" }
tokio = { version = "1.26.0", features = ["time"] }
crypto-bigint = { version = "=0.5.0" }

mystiko_utils = { git = "https://github.com/mystikonetwork/mystiko-rust", rev = "519ea91", features = ["config"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
rand = { version = "0.8.5" }
mystiko_fs = { version = "0.1.0", path = "../mystiko_fs" }
mockito = { version = "1.1.0" }
