[package]
name = "mystiko_static_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = { version = "0.1.64" }
dirs = { version = "5.0" }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.91" }
tokio = { version = "1.26.0", features = ["fs", "io-util", "sync"] }
typed-builder = { version = "0.15.2" }

[dev-dependencies]
bytes = { version = "1.4.0" }
http = { version = "0.2.9" }
mockall = { version = "0.11.4" }
tempfile = { version = "3.7.1" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }